Use immutable Set.